# langchain-research-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  research_agent.py  research_assistant.db
nootbooks/: 01_Your_First_AI_Agent.ipynb  exercise_1.ipynb  exercise_2.ipynb  exercise_3.ipynb  exercise_4.ipynb  test.ipynb
